--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,176 @@
+
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '@angular/material' as mat;
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
+
+// The warn palette is optional (defaults to red).
+$wcu-material-warn: mat.define-palette(mat.$red-palette);
+
+// Define color palettes
+// Teal Palette
+$wcu-teal-palette: (
+ 50: #dff4fb,
+ 100: #b0e5f3,
+ 200: #7dd4ea,
+ 300: #4bc2df,
+ 400: #27b6d6,
+ 500: #13aacd,
+ 600: #0e9bba,
+ 700: #0587a0,
+ 800: #007488,
+ 900: #00525d,
+ 
+ contrast: (
+   50: rgba(black, 0.87),
+   100: rgba(black, 0.87),
+   200: rgba(black, 0.87),
+   300: rgba(black, 0.87),
+   400: rgba(black, 0.87),
+   500: rgba(black, 0.87),
+   600: rgba(black, 0.87),
+   700: white,
+   800: white,
+   900: white,
+ )
+);
+
+// Orange Palette
+$wcu-orange-palette: (
+ 50: #fff3e2,
+ 100: #fee0b7,
+ 200: #fecc89,
+ 300: #feb85c,
+ 400: #fea83e,
+ 500: #fd9a2d,
+ 600: #f88e2a,
+ 700: #f17f27,
+ 800: #ea7125,
+ 900: #df5922,
+ 
+ contrast: (
+   50: rgba(black, 0.87),
+   100: rgba(black, 0.87),
+   200: rgba(black, 0.87),
+   300: rgba(black, 0.87),
+   400: rgba(black, 0.87),
+   500: rgba(black, 0.87),
+   600: rgba(black, 0.87),
+   700: rgba(black, 0.87),
+   800: white,
+   900: white,
+ )
+);
+
+// Define theme primary and accent colors
+$wcu-primary: mat.define-palette($wcu-teal-palette, 800);
+$wcu-accent: mat.define-palette($wcu-orange-palette, 800);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$wcu-material-theme: mat.define-light-theme((
+  color: (
+    primary: $wcu-primary,
+    accent: $wcu-accent,
+    warn: $wcu-material-warn,
+  )
+));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($wcu-material-theme);
+
 /* You can add global styles to this file, and also import other style files */
+
+// Variables 
+$app-background: #f4f9fa;
+$border-light: #b6b6b6;
+
+// Global styles
+* { font-family: Montserrat, "Arial", sans-serif !important; }
+html, body { height: 100%; }
+body { margin: 0; } 
+.mat-app-background { background-color: $app-background !important; } 
+
+// Component styles
+
+// Form Buttons
+
+// Reset defaults
+::ng-deep .mat-button-toggle-group-appearance-standard {
+  border: none !important;
+  border-radius: none;
+}
+
+.mat-button-toggle-group-appearance-standard {
+  border: solid 1px #f4f9fa;
+}
+
+// Horizontal form buttons
+.vertical-form-btn-group,
+.horizontal-form-btn-group {  
+  width: 100% !important;
+} 
+
+.mat-button-toggle-vertical {
+  gap: 12px;
+} 
+
+.horizontal-form-btn-group {
+  justify-content: space-between !important;  
+  gap: 12px;
+} 
+
+.horizontal-form-btn {
+  min-width: 48%;
+} 
+
+.mat-button-toggle-button {
+  border: 1px solid $border-light !important;
+}
+
+// Checked/active button styles
+.mat-button-toggle-checked {
+  background-color: mat.get-color-from-palette($wcu-teal-palette, 800);  
+  color: white !important;
+  font-weight: 700;
+}
+
+.mat-button-toggle-group-appearance-standard.mat-button-toggle-vertical .mat-button-toggle + .mat-button-toggle {
+  border-left: none;
+  border-right: none;
+  border-top: none;
+}
+
+// Save and continue button
+.continue-btn {
+  border-radius: 0px !important;
+  height: 54px;
+  width: 100%;
+  font-weight: 700;
+}
+
+// Form controls
+.mat-form-field-appearance-outline .mat-form-field-outline {
+  background-color: white !important;
+  color: $border-light;  
+}
+
+.form-control {
+  width: 100%;  
+}
+
+// Utilities for component inventory
+.component-container {  
+  padding: 12px;
+}
+
+.component-container-no-gap {
+  margin-top: 24px;
+}
