--- a/src/app/form-controls/select-field/select-field.component.scss
+++ b/src/app/form-controls/select-field/select-field.component.scss
@@ -1,5 +1,6 @@
-//.mat-form-field ::ng-deep .mat-form-field-outline-start,
-//.mat-form-field ::ng-deep .mat-form-field-outline-gap,
-//.mat-form-field ::ng-deep .mat-form-field-outline-end {  
-//  border-width: 3px !important;
-//}
+.mat-form-field ::ng-deep .mat-form-field-outline-start,
+.mat-form-field ::ng-deep .mat-form-field-outline-gap,
+.mat-form-field ::ng-deep .mat-form-field-outline-end {  
+  border-width: 1.2px !important;
+  border-radius: 0;
+}
