initialize navbar component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,25 @@
-<div class="component-container">
-  <app-select-field></app-select-field>
-</div>
+<app-navbar></app-navbar>
 
-<div class="component-container">
-  <app-text-field></app-text-field>
-</div>
+<div class="content-container">
+  <div class="component-container">
+    <app-select-field></app-select-field>
+  </div>
 
-<div class="component-container">
-  <p>Your sex:</p>
-  <app-v-form-btn-group></app-v-form-btn-group>
-</div>
+  <div class="component-container">
+    <app-text-field></app-text-field>
+  </div>
 
-<div class="component-container">
-  <p>What type of program are you looking for?</p>
-  <app-h-form-btn-group></app-h-form-btn-group>
-</div>
+  <div class="component-container">
+    <p>Your sex:</p>
+    <app-v-form-btn-group></app-v-form-btn-group>
+  </div>
 
-<div class="component-container-no-gap">
-  <app-continue-btn></app-continue-btn>
+  <div class="component-container">
+    <p>What type of program are you looking for?</p>
+    <app-h-form-btn-group></app-h-form-btn-group>
+  </div>
+
+  <div class="component-container-no-gap">
+    <app-continue-btn></app-continue-btn>
+  </div>
 </div>
