--- a/src/styles.scss
+++ b/src/styles.scss
@@ -167,6 +167,10 @@ body { margin: 0; }
 }
 
 // Utilities for component inventory
+.content-container {
+  padding-top: 36px;
+}
+
 .component-container {  
   padding: 12px;
 }
