initialize progress bar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,11 @@
 
 <div class="content-container">
   <div class="component-container">
+    <p style="text-align: center;">Your Application Progress</p>
+    <app-progress-bar></app-progress-bar>
+  </div>
+
+  <div class="component-container">
     <app-select-field></app-select-field>
   </div>
 
