initialize home page card with active, inactive, complete, and collapsed states

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,10 @@
   </div>
 
   <div class="component-container">
+    <app-home-page-card></app-home-page-card>
+  </div>
+
+  <div class="component-container">
     <app-select-field></app-select-field>
   </div>
 
