adjust spacing in between components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
     <app-home-page-card></app-home-page-card>
   </div>
 
-  <div class="component-container">
+  <div class="component-container" style="margin-top: 24px;">
     <app-select-field></app-select-field>
   </div>
 
