--- a/src/app/components/cards/home-page-card/home-page-card.component.scss
+++ b/src/app/components/cards/home-page-card/home-page-card.component.scss
@@ -11,6 +11,10 @@
   font-weight: 600;
 }
 
+.home-page-card-container {
+  margin-top: 12px;
+}
+
 .home-page-card-title {
   display: flex; align-items: center; 
   justify-content: space-between;
