initialize form card component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,6 +28,10 @@
     <app-h-form-btn-group></app-h-form-btn-group>
   </div>
 
+  <div class="component-container">
+    <app-form-card></app-form-card>
+  </div>
+
   <div class="component-container-no-gap">
     <app-continue-btn></app-continue-btn>
   </div>
