--- a/src/app/components/cards/home-page-card/home-page-card.component.html
+++ b/src/app/components/cards/home-page-card/home-page-card.component.html
@@ -1,5 +1,5 @@
 <div class="component-container">
-  <p>Toggle Card State:</p>
+  <p>Toggle Home Page Card State:</p>
   <section class="card-state-container">
     <mat-radio-group [(ngModel)]="cardState">
       <mat-radio-button class="card-state-toggle" value="active">
