align css with changes to figma board

--- a/src/app/components/cards/home-page-card/home-page-card.component.html
+++ b/src/app/components/cards/home-page-card/home-page-card.component.html
@@ -50,7 +50,7 @@
         <span class="home-page-card-li-title">Emergency Contact</span>
       </li>
     </ul>
-    <button mat-flat-button color="accent" class="card-continue-btn">CONTINUE</button>
+    <button mat-flat-button color="accent" class="card-continue-btn">Continue</button>
   </mat-card>
 
   <!-- Inactive Card -->
