initialize file card

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,6 +32,10 @@
     <app-form-card></app-form-card>
   </div>
 
+  <div class="component-container">
+    <app-file-card></app-file-card>
+  </div>
+
   <div class="component-container-no-gap">
     <app-continue-btn></app-continue-btn>
   </div>
