initialize expansion panel component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,6 +36,10 @@
     <app-file-card></app-file-card>
   </div>
 
+  <div class="component-container">
+    <app-expansion-panel></app-expansion-panel>
+  </div>
+
   <div class="component-container-no-gap">
     <app-continue-btn></app-continue-btn>
   </div>
