add inactive checkmark to form card

--- a/src/app/components/cards/form-card/form-card.component.html
+++ b/src/app/components/cards/form-card/form-card.component.html
@@ -36,12 +36,11 @@
   <!-- Inactive Card -->
   <mat-card
     *ngSwitchCase="cardStateIsInactive"
-    [class.mat-elevation-z2]="true"
-    style="border: 1px solid #b6b6b6;"
+    [class.mat-elevation-z2]="true"    
   >
     <div class="form-card-title-container" style="height: 24px !important;">
       <span class="form-card-title">Working Professional</span>
-      <div></div>
+      <img src="../../../../assets/icons/form-card-checkmark-inactive.svg" alt="">      
     </div>
     <p class="form-card-desc">
       Take more time to complete your program by taking fewer courses per term.
