--- a/src/app/components/expansion-panel/expansion-panel.component.scss
+++ b/src/app/components/expansion-panel/expansion-panel.component.scss
@@ -1,4 +1,10 @@
+::ng-deep .expansion-panel-parent .mat-expansion-panel-spacing{
+  margin-bottom: 12px !important;
+}
+
 ::ng-deep .mat-expansion-panel-header {
+  font-weight: 400 !important;
+  font-size: 17px !important;
   padding: 0 24px 0 12px !important;
 }
 
@@ -6,11 +12,18 @@
   margin-right: 0 !important;
 }
 
-::ng-deep #cdk-accordion-child-0 > div {
+::ng-deep body > app-root > div > div.component-container > app-expansion-panel > mat-accordion:nth-child(2) > mat-expansion-panel {
+  margin-top: 12px !important;
+}
+
+::ng-deep #cdk-accordion-child-0 > div,
+::ng-deep #cdk-accordion-child-6 > div {
   padding: 0 !important;
 }
 
 ::ng-deep .accordion-child .mat-expansion-panel-header {
+  font-size: 15px !important;
+  font-weight: 500 !important;
   justify-content: space-between;
   align-items: center;
 }
@@ -20,7 +33,7 @@
 }
 
 ::ng-deep .accordion-child > .expansion-panel-child-content {
-  margin: 0 12px !important;  
+  margin: 0 12px !important;      
 }
 
 ::ng-deep .expansion-panel-child .mat-expansion-panel-header {
@@ -29,6 +42,26 @@
 
 .expansion-panel-child,
 ::ng-deep .expansion-panel-child > .mat-expansion-panel-header {
-  background-color: #F6F6F6;
-  background: #F6F6F6 !important;
+  //background-color: #F6F6F6;
+  //background: #F6F6F6 !important;
+}
+
+::ng-deep .mat-expansion-panel-content {
+  font-size: 15px !important;
+  font-weight: 500 !important;
+}
+
+::ng-deep .mat-accordion>.mat-expansion-panel-spacing {
+  border-bottom-left-radius:  0px !important;
+  border-bottom-right-radius: 0px !important;
+}
+
+::ng-deep .mat-accordion>.mat-expansion-panel-spacing:last-child {
+  border-bottom-left-radius: 4px !important;
+  border-bottom-right-radius: 4px !important;
+  margin-bottom: 0 !important;
+}
+
+::ng-deep img.ng-star-inserted {
+  max-height: 24px !important; 
 }
