set font weight of form control labels back to default

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -174,7 +174,7 @@ body { margin: 0; }
 }
 
 .mat-form-field-label {
-  font-weight: 700 !important;
+  // font-weight: 700 !important;
 }
 
 .form-control {
