move any shared/repeat styles from component's scss into styles.scss

--- a/src/app/components/cards/home-page-card/home-page-card.component.html
+++ b/src/app/components/cards/home-page-card/home-page-card.component.html
@@ -24,7 +24,7 @@
     *ngSwitchCase="cardStateIsActive"
     [class.mat-elevation-z4]="true"
   >
-    <div class="home-page-card-title">
+    <div class="home-page-card-title-container">
       <p class="home-page-card-step-name">About Me</p>
       <p class="home-page-card-step-number">Step 1</p>
     </div>
@@ -59,7 +59,7 @@
     [class.mat-elevation-z0]="true"
     style="border: 1px solid #b6b6b6;"
   >
-    <div class="home-page-card-title">
+    <div class="home-page-card-title-container">
       <p class="home-page-card-step-name">About Me</p>
       <p class="home-page-card-step-number">Step 1</p>
     </div>
@@ -89,7 +89,7 @@
 
   <!-- Complete Card -->
   <mat-card [class.mat-elevation-z4]="true" *ngSwitchCase="cardStateIsComplete">
-    <div class="home-page-card-title">
+    <div class="home-page-card-title-container">
       <p class="home-page-card-step-name">About Me</p>
       <p class="home-page-card-step-number">Step 1</p>
     </div>
@@ -128,7 +128,7 @@
     [class.mat-elevation-z0]="true"
     style="border: 1px solid #b6b6b6"
   >
-    <div class="home-page-card-title">
+    <div class="home-page-card-title-container">
       <span class="home-page-card-step-name">About Me</span>
       <div class="collapsed-step-number">
         <img src="../../../../assets/icons/checkmark.svg" alt="" />
