--- a/src/app/components/expansion-panel/expansion-panel.component.scss
+++ b/src/app/components/expansion-panel/expansion-panel.component.scss
@@ -40,6 +40,7 @@
   padding: 6px 16px !important;
 }
 
+// Sets gray background on child panels
 // .expansion-panel-child,
 // ::ng-deep .expansion-panel-child > .mat-expansion-panel-header {
 //   background-color: #F6F6F6;
