remove inline styles from all components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
 <app-navbar></app-navbar>
 
 <div class="content-container">
-  <div class="component-container">
-    <p style="text-align: center;">Your Application Progress</p>
+  <div class="component-container">    
     <app-progress-bar></app-progress-bar>
   </div>
 
@@ -10,7 +9,7 @@
     <app-home-page-card></app-home-page-card>
   </div>
 
-  <div class="component-container" style="margin-top: 24px;">
+  <div class="component-container extra-margin">
     <app-select-field></app-select-field>
   </div>
 
