--- a/src/app/components/cards/file-card/file-card.component.html
+++ b/src/app/components/cards/file-card/file-card.component.html
@@ -32,9 +32,9 @@
 
   <!-- Invalid Card -->
   <mat-card
+    class="file-card-invalid"
     *ngSwitchCase="cardStateIsInvalid"
-    [class.mat-elevation-z0]="true"
-    style="border: 1px solid #b6b6b6"
+    [class.mat-elevation-z0]="true"    
   >
     <div class="file-card-title-container">
       <span class="file-card-title">Resume</span>      
