--- a/src/styles.scss
+++ b/src/styles.scss
@@ -224,6 +224,8 @@ body { margin: 0; }
   padding: 12px;
 }
 
-.component-container-no-gap {
+.component-container-no-gap, 
+.extra-margin {
   margin-top: 24px;
 }
+
