--- a/src/app/components/progress-bar/progress-bar.component.scss
+++ b/src/app/components/progress-bar/progress-bar.component.scss
@@ -1,3 +1,7 @@
+.progress-bar-label {
+  text-align: center;
+}
+
 ::ng-deep .mat-progress-bar {
   height: 25px !important;
   border-radius: 25px !important;
