--- a/src/app/components/cards/file-card/file-card.component.html
+++ b/src/app/components/cards/file-card/file-card.component.html
@@ -40,7 +40,7 @@
       <span class="file-card-title">Resume</span>      
     </div>
     <p class="file-card-desc">
-      File Size Exceeds 5MB
+      File size exceeds 100MB. Upload a smaller file.
     </p>
   </mat-card>
 </div>
