--- a/src/styles.scss
+++ b/src/styles.scss
@@ -195,7 +195,7 @@ body { margin: 0; }
 
 .form-card-desc,
 .file-card-desc {
-  margin-top: 12px;
+  margin-top: 12px !important;
   font-size: 16px;
   font-weight: 400;
   line-height: 22px;
