align parent/child content in home page and form cards

--- a/src/app/components/cards/home-page-card/home-page-card.component.html
+++ b/src/app/components/cards/home-page-card/home-page-card.component.html
@@ -28,25 +28,25 @@
       <p class="home-page-card-step-name">About Me</p>
       <p class="home-page-card-step-number">Step 1</p>
     </div>
-    <ul class="home-page-card-ul">
+    <ul class="home-page-card-ul" style="margin-left: 0;">
       <li class="home-page-card-li">
-        <img src="../../../../assets/icons/checkmark-blank.svg" alt="" />
+        <!-- <img src="../../../../assets/icons/checkmark-blank.svg" alt="" /> -->
         <span class="home-page-card-li-title">Personal Information</span>
       </li>
       <li class="home-page-card-li">
-        <img src="../../../../assets/icons/checkmark-blank.svg" alt="" />
+        <!-- <img src="../../../../assets/icons/checkmark-blank.svg" alt="" /> -->
         <span class="home-page-card-li-title">Phone Number & Email</span>
       </li>
       <li class="home-page-card-li">
-        <img src="../../../../assets/icons/checkmark-blank.svg" alt="" />
+        <!-- <img src="../../../../assets/icons/checkmark-blank.svg" alt="" /> -->
         <span class="home-page-card-li-title">Date of Birth & Sex</span>
       </li>
       <li class="home-page-card-li">
-        <img src="../../../../assets/icons/checkmark-blank.svg" alt="" />
+        <!-- <img src="../../../../assets/icons/checkmark-blank.svg" alt="" /> -->
         <span class="home-page-card-li-title">Current Mailing Address</span>
       </li>
       <li class="home-page-card-li">
-        <img src="../../../../assets/icons/checkmark-blank.svg" alt="" />
+        <!-- <img src="../../../../assets/icons/checkmark-blank.svg" alt="" /> -->
         <span class="home-page-card-li-title">Emergency Contact</span>
       </li>
     </ul>
@@ -65,23 +65,23 @@
     </div>
     <ul class="home-page-card-ul">
       <li class="home-page-card-li">
-        <img src="../../../../assets/icons/checkmark-blank.svg" alt="" />
+        <!-- <img src="../../../../assets/icons/checkmark-blank.svg" alt="" /> -->
         <span class="home-page-card-li-title">Personal Information</span>
       </li>
       <li class="home-page-card-li">
-        <img src="../../../../assets/icons/checkmark-blank.svg" alt="" />
+        <!-- <img src="../../../../assets/icons/checkmark-blank.svg" alt="" /> -->
         <span class="home-page-card-li-title">Phone Number & Email</span>
       </li>
       <li class="home-page-card-li">
-        <img src="../../../../assets/icons/checkmark-blank.svg" alt="" />
+        <!-- <img src="../../../../assets/icons/checkmark-blank.svg" alt="" /> -->
         <span class="home-page-card-li-title">Date of Birth & Sex</span>
       </li>
       <li class="home-page-card-li">
-        <img src="../../../../assets/icons/checkmark-blank.svg" alt="" />
+        <!-- <img src="../../../../assets/icons/checkmark-blank.svg" alt="" /> -->
         <span class="home-page-card-li-title">Current Mailing Address</span>
       </li>
       <li class="home-page-card-li">
-        <img src="../../../../assets/icons/checkmark-blank.svg" alt="" />
+        <!-- <img src="../../../../assets/icons/checkmark-blank.svg" alt="" /> -->
         <span class="home-page-card-li-title">Emergency Conact</span>
       </li>
     </ul>
@@ -96,23 +96,23 @@
     <ul class="home-page-card-ul">
       <li class="home-page-card-li">
         <img src="../../../../assets/icons/checkmark.svg" alt="" />
-        <span class="home-page-card-li-title">Personal Information</span>
+        <span class="home-page-card-li-title completed">Personal Information</span>
       </li>
       <li class="home-page-card-li">
         <img src="../../../../assets/icons/checkmark.svg" alt="" />
-        <span class="home-page-card-li-title">Phone Number & Email</span>
+        <span class="home-page-card-li-title completed">Phone Number & Email</span>
       </li>
       <li class="home-page-card-li">
         <img src="../../../../assets/icons/checkmark.svg" alt="" />
-        <span class="home-page-card-li-title">Date of Birth & Sex</span>
+        <span class="home-page-card-li-title completed">Date of Birth & Sex</span>
       </li>
       <li class="home-page-card-li">
         <img src="../../../../assets/icons/checkmark.svg" alt="" />
-        <span class="home-page-card-li-title">Current Mailing Address</span>
+        <span class="home-page-card-li-title completed">Current Mailing Address</span>
       </li>
       <li class="home-page-card-li">
         <img src="../../../../assets/icons/checkmark.svg" alt="" />
-        <span class="home-page-card-li-title">Emergency Contact</span>
+        <span class="home-page-card-li-title completed">Emergency Contact</span>
       </li>
     </ul>
     <div class="edit-btn-container">
