--- a/src/app/components/expansion-panel/expansion-panel.component.html
+++ b/src/app/components/expansion-panel/expansion-panel.component.html
@@ -32,7 +32,7 @@
         </mat-expansion-panel-header>
 
         <p class="exp-panel-child-content">
-          <i
+          <i class="bsn-disclaimer"
             >You must be a licensed registered nurse and have completed a
             Bachelor of Science in Nursing degree or a bachelor's degree in a
             closely related field to apply for this program.</i
@@ -253,7 +253,7 @@
         </mat-expansion-panel-header>
 
         <p class="exp-panel-child-content">
-          <i
+          <i class="bsn-disclaimer"
             >You must be a licensed registered nurse and have completed a
             Bachelor of Science in Nursing degree or a bachelor's degree in a
             closely related field to apply for this program.</i
