--- a/src/app/components/expansion-panel/expansion-panel.component.scss
+++ b/src/app/components/expansion-panel/expansion-panel.component.scss
@@ -31,7 +31,7 @@
 
 ::ng-deep .accordion-child .mat-expansion-panel-header {
   font-size: 15px !important;
-  font-weight: 500 !important;
+  font-weight: 600 !important;
   justify-content: space-between;
   align-items: center;
 }
@@ -58,6 +58,14 @@
 ::ng-deep .mat-expansion-panel-content {
   font-size: 15px !important;
   font-weight: 500 !important;
+}
+
+.bsn-disclaimer {
+  font-weight: 600 !important;
+}
+
+::ng-deep .mat-expansion-panel-body {
+  padding: 0 12px 16px !important; 
 }
 
 ::ng-deep .mat-accordion>.mat-expansion-panel-spacing {
