increase size and weight of text/select inputs

--- a/src/app/components/form-controls/text-field/text-field.component.html
+++ b/src/app/components/form-controls/text-field/text-field.component.html
@@ -1,5 +1,5 @@
 <mat-form-field class="form-control" appearance="outline" #textFieldRef>
-  <mat-label>Legal First Name</mat-label>
+  <mat-label class="form-control-label">Legal First Name</mat-label>
   <input
     matInput
     (focus)="textFieldRef.updateOutlineGap()"
