--- a/src/styles.scss
+++ b/src/styles.scss
@@ -168,8 +168,21 @@ body { margin: 0; }
   color: $border-light;    
 }
 
-.form-control {
+.form-control {      
+  font-size: 16px !important;
   width: 100%;  
+}
+
+.mat-form-field-label {
+  // color: rgba(black, 0.87) !important;  
+}
+
+.mat-form-field.mat-focused .mat-form-field-label {
+  color: #007488 !important;
+}
+
+.form-control-label {
+  font-weight: 600;
 }
 
 // Cards
