--- a/src/app/components/form-controls/select-field/select-field.component.html
+++ b/src/app/components/form-controls/select-field/select-field.component.html
@@ -1,5 +1,5 @@
 <mat-form-field class="form-control" appearance="outline" #selectFieldRef>
-  <mat-label>Select an Online WCU Program</mat-label>
+  <mat-label class="form-control-label">Select an Online WCU Program</mat-label>
   <mat-select (focus)="selectFieldRef.updateOutlineGap()" required>
     <mat-option *ngFor="let program of programs" [value]="program.value">
       {{ program.viewValue }}
