reduce width of progress bar

--- a/src/app/components/progress-bar/progress-bar.component.scss
+++ b/src/app/components/progress-bar/progress-bar.component.scss
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+::ng-deep .mat-progress-bar .mat-progress-bar-background {
+  width: 100% !important;
+}
+
 ::ng-deep .mat-progress-bar {
   height: 25px !important;
   border-radius: 25px !important;
