--- a/src/app/components/progress-bar/progress-bar.component.scss
+++ b/src/app/components/progress-bar/progress-bar.component.scss
@@ -10,6 +10,8 @@
   height: 25px !important;
   border-radius: 25px !important;
   box-shadow: 0px 1px 7px rgba(0, 0, 0, 0.25) !important;
+  width: 95% !important;
+  margin: auto !important;
 }
 
 ::ng-deep .mat-progress-bar-fill::after {
