--- a/src/app/components/progress-bar/progress-bar.component.scss
+++ b/src/app/components/progress-bar/progress-bar.component.scss
@@ -2,15 +2,15 @@
   text-align: center;
 }
 
-::ng-deep .mat-progress-bar .mat-progress-bar-background {
-  width: 100% !important;
-}
+// ::ng-deep .mat-progress-bar .mat-progress-bar-background {
+  // width: 100% !important;
+// }
 
 ::ng-deep .mat-progress-bar {
   height: 25px !important;
   border-radius: 25px !important;
   box-shadow: 0px 1px 7px rgba(0, 0, 0, 0.25) !important;
-  width: 95% !important;
+  width: 75% !important;
   margin: auto !important;
 }
 
