--- a/src/app/components/progress-bar/progress-bar.component.scss
+++ b/src/app/components/progress-bar/progress-bar.component.scss
@@ -9,9 +9,11 @@
 ::ng-deep .mat-progress-bar {
   height: 25px !important;
   border-radius: 25px !important;
+  -webkit-border-radius: 25px !important;
+  -moz-border-radius: 25px !important;
   box-shadow: 0px 1px 7px rgba(0, 0, 0, 0.25) !important;
-  width: 75% !important;
-  margin: auto !important;
+  // width: 75% !important;
+  // margin: auto !important;
 }
 
 ::ng-deep .mat-progress-bar-fill::after {
