--- a/src/app/components/progress-bar/progress-bar.component.scss
+++ b/src/app/components/progress-bar/progress-bar.component.scss
@@ -12,12 +12,19 @@
   -webkit-border-radius: 25px !important;
   -moz-border-radius: 25px !important;
   box-shadow: 0px 1px 7px rgba(0, 0, 0, 0.25) !important;
+  transform: translateZ(0);
   // width: 75% !important;
   // margin: auto !important;
 }
 
 ::ng-deep .mat-progress-bar-fill::after {
   background-color: #B0DBAC !important;
+  border-top-left-radius: 25px !important;
+  -moz-border-radius-topleft: 25px !important;	
+  -webkit-border-top-left-radius: 25px !important;
+  border-bottom-left-radius: 25px !important;
+  -moz-border-radius-bottomleft: 25px !important;	
+  -webkit-border-bottom-left-radius: 25px !important;
 }
 
 ::ng-deep .mat-progress-bar-buffer {
