change continue btn to rounded

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,7 +39,7 @@
     <app-expansion-panel></app-expansion-panel>
   </div>
 
-  <div class="component-container-no-gap">
+  <div class="button-container">
     <app-continue-btn></app-continue-btn>
   </div>
 </div>
